minor button-gap fix

--- a/styles/index.css
+++ b/styles/index.css
@@ -70,6 +70,7 @@ button {
 .menu-buttons {
     display: flex;
     justify-content: flex-end;
+    gap: 20px;
 }
 
 .btn--header {
